--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SERVER_URL=https://cyan-upset-skunk.cyclic.app
-# URL = "http://localhost:3000";
+# VITE_SERVER_URL=https://cyan-upset-skunk.cyclic.app
+VITE_SERVER_URL=http://localhost:3000
